OOTDa ver.0.0.3 commit! Fix Logout bug and Update UI.

--- a/src/main/front/src/styles/common.css
+++ b/src/main/front/src/styles/common.css
@@ -1,9 +1,8 @@
+/*@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');*/
+* { 
+	font-family: 'Noto Sans KR', sans-serif;
+}
 
 h1, h2, h3, h4, h5, h6 {
 	text-align: center;
-}
-
-.container {
-	width: 100%;
-	padding: 1% 10%;
 }
